--- a/StudentManager/StatisticsDialog.ui
+++ b/StudentManager/StatisticsDialog.ui
@@ -21,7 +21,7 @@
     <number>2</number>
    </property>
    <item>
-    <widget class="QTextEdit" name="textEdit">
+    <widget class="QTextEdit" name="ReportBox">
      <property name="readOnly">
       <bool>true</bool>
      </property>
